# nodecog

./: ARCHITECTURE_DOCUMENTATION_SUMMARY.md  COGNITIVE_SYNERGY_SUMMARY.md  DEVELOPMENT_ROADMAP.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_VERIFICATION.md  NODESPACE_COMPLETE.md  NODESPACE_IMPLEMENTATION.md  OPENCOG_PHASE3_SUMMARY.md  OPENCOG_SUMMARY.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  README.md  node.gyp
doc/: ARCHITECTURE_INDEX.md  COMPONENT_INTERACTIONS.md  FORMAL_SPECIFICATION.md  TECHNICAL_ARCHITECTURE.md
doc/opencog/: COGNITIVE_SYNERGY_ENGINE.md  MODULE_LOADER_INTEGRATION.md  NODESPACE.md  PHASE3_FEATURES.md  PHASE4_FEATURES.md  README.md
examples/: advanced-opencog-demo.js  cognitive-synergy-engine.js  nodespace-agent-demo.js  nodespace-demo.js  opencog-demo.js  opencog-module-loader-demo.js  phase4-opencog-demo.js  simple-app-with-opencog.js
examples/embedder/: CMakeLists.txt  README.md  embedder.cc
lib/: opencog.js
lib/internal/: cognitive_synergy.js  nodespace_loader.mjs
src/: cognitive_napi_bridge.cc  cognitive_napi_bridge.h  cognitive_synergy_engine.cc  cognitive_synergy_engine.h
test/parallel/: test-cognitive-synergy-engine.js  test-opencog-advanced-agents.js  test-opencog-agent.js  test-opencog-atomspace.js  test-opencog-attention.js  test-opencog-cognitive-loop.js  test-opencog-distributed-atomspace.js  test-opencog-integration.js  test-opencog-module-loader-integration.js  test-opencog-nodespace.js  test-opencog-orchestrator.js  test-opencog-phase4-components.js  test-opencog-pln.js  test-opencog-temporal.js  (+1 more)
(+20 files in other folders)
